Bug 464955 - right click context menus not always showing with compositing
Summary: right click context menus not always showing with compositing
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: 5.26.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 462420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-28 18:28 UTC by Mariusz Libera
Modified: 2023-02-11 11:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mariusz Libera 2023-01-28 18:28:10 UTC
When I right click on the desktop or inside some apps like Chrome, the context menus don't show until I move the mouse cursor over them or show but with a noticable delay. Can't reproduce in all apps - Firefox and Dolphin always show them but with a slight delay. With composing disabled problem goes away - context menus show up immediately.

Operating System: Arch Linux 
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.8-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 19.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 81BF
System Version: Lenovo ideapad 520-15IKB

mesa: 22.3.4
Comment 1 David Edmundson 2023-02-01 16:41:24 UTC
We cannot reproduce, 
Please ensure you've disabled any kwin scripts or effects that could be affecting this and confirm if there's still an issue.
Comment 2 Mariusz Libera 2023-02-01 17:00:52 UTC
I was able to reproduce it on a fresh profile after disabling fading popup effect. I don't have any scripts of custom effects.
Comment 3 Bug Janitor Service 2023-02-02 18:10:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3531
Comment 4 Vlad Zahorodnii 2023-02-03 14:40:17 UTC
Git commit 37c4a4536e39b81f2cfe4d61d63abe1499130f18 by Vlad Zahorodnii.
Committed on 03/02/2023 at 14:09.
Pushed by vladz into branch 'master'.

scene: Sync Window::readyForPainting() to window item visibility

If a window is made ready for painting with some delay, the item won't
schedule an update. To fix that, sync the item visibility state with
Window::readyForPainting(). When the item visibility changes, a repaint
will be scheduled.

M  +3    -0    src/scene/windowitem.cpp
M  +2    -6    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/commit/37c4a4536e39b81f2cfe4d61d63abe1499130f18
Comment 5 Vlad Zahorodnii 2023-02-03 14:40:50 UTC
Git commit 946baa0114c06a40bb63eaa99ddc830b35637191 by Vlad Zahorodnii.
Committed on 03/02/2023 at 14:40.
Pushed by vladz into branch 'cherry-pick-37c4a453'.

scene: Sync Window::readyForPainting() to window item visibility

If a window is made ready for painting with some delay, the item won't
schedule an update. To fix that, sync the item visibility state with
Window::readyForPainting(). When the item visibility changes, a repaint
will be scheduled.


(cherry picked from commit 37c4a4536e39b81f2cfe4d61d63abe1499130f18)

M  +3    -0    src/scene/windowitem.cpp
M  +2    -6    src/scene/workspacescene.cpp

https://invent.kde.org/plasma/kwin/commit/946baa0114c06a40bb63eaa99ddc830b35637191
Comment 6 Christoph Feck 2023-02-11 11:10:32 UTC
*** Bug 462420 has been marked as a duplicate of this bug. ***